# necko-server

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs
necko-core/: Cargo.toml
necko-core/src/: lib.rs  main.rs
necko-core/src/client/: handlers.rs  mod.rs
necko-core/src/server/: cached.rs  mod.rs  status.rs
necko-protocol/: Cargo.toml
necko-protocol/src/: decoder.rs  encoder.rs  lib.rs  packets.rs  types.rs
necko-protocol/src/buffer/: mod.rs
necko-protocol/src/packets/clientbound/status/: mod.rs  pong_response.rs  status_response.rs
necko-protocol/src/packets/serverbound/: intention.rs  mod.rs
necko-protocol/src/packets/serverbound/login/: hello.rs
necko-protocol/src/packets/serverbound/status/: ping_request.rs  status_request.rs
