[package]
name = "necko-core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "necko-core"
path = "src/main.rs"

[dependencies]
log.workspace = true

necko-protocol = { path = "../necko-protocol" }

tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "io-util"] }
bytes = "1.9.0"
crossbeam = "0.8.4"
env_logger = "0.11.5"
colored = "2.1.0"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
base64 = "0.22.1"
image = "0.25.5"